# phetch

./: .eslintrc.json  .gitignore  LICENSE  README.md  localhost.crt  localhost.key  package.json  pops  pyproject.toml  style-guide  style.toml
api/: config.py  wsgi.py
api/api/: __init__.py
api/api/models/: __init__.py  application.py  base.py  chemo.py  inspections.py  inventory.py  local.py  meditech.py  omnicell.py  organization.py  supplies.py
api/api/resources/: __init__.py  chemo.py  inspections.py  inventory.py  meditech.py  omnicell.py  organization.py  statstock.py  status.py
api/api/utils/: export.py  imports.py  migrate.py  serialize.py
public/fonts/: fonts.css
src/components/: AuthenticatedTemplate.js  Boolean.js  ChemoProgress.js  ControlLevel.js  Loading.js  NavigationTree.js  Palette.js  Pill.js  Progress.js
src/components/calendar/: Calendar.js  ChemoEvent.js
src/components/containers/: Card.js  Column.js  FormModal.js  Modal.js  ModalBackground.js  Row.js
src/components/data/: Calendar.js  MiniTable.js  SparklineCard.js  StatusCard.js  Table.js
src/components/input/: ActionButton.js  AddButton.js  Button.js  CalculatorButton.js  Checkbox.js  DeleteButton.js  EditButton.js  FormLabel.js  PrintButton.js  Radio.js  Select.js  Textarea.js  (+3 more)
src/libs/: MsGraphApiCall.js  authConfig.js  camelize.js  crud.js  handleSwrException.js  request.js  setApiUrl.js  toPDF.js  useModalForm.js
src/pages/: _app.js  _document.js  index.js  modal.js  server.js  status-board.js  styles.js  zebra.js
src/styles/: color.js  global.js  measures.js  styles.js
(+29 files in other folders)
