[tool.poetry]
name = "phetch"
version = "0.1.0"
description = ""
authors = ["Corey White <coreyjwhite@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.1"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
Flask-RESTful = "^0.3.8"
Flask-Migrate = "^2.6.0"
SQLAlchemy = "^1.3.23"
Flask-Cors = "^3.0.10"
Flask = "^1.1.2"
Flask-SQLAlchemy = "^2.4.4"
pandas = "^1.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
